Template clean up

--- a/.github/ISSUE_TEMPLATE/---------------------.md
+++ b/.github/ISSUE_TEMPLATE/---------------------.md
@@ -25,13 +25,7 @@ assignees: DmitryRendov
 **Коротенько о себе (про майн канешне, но опционально):**
  - Рост 168, вес 50, размер третий
  - Версия 1.18.1
- - Из модов, голый оптифайн и лайтматика (куда уж без неё)
+ - Из модов, голый оптифайн и лайтматика (куда уж без неё, #яжеархитектор)
 
-**Smartphone (please complete the following information):**
- - Device: [e.g. iPhone6]
- - OS: [e.g. iOS8.1]
- - Browser [e.g. stock browser, safari]
- - Version [e.g. 22]
-
-**Additional context**
-Add any other context about the problem here.
+**Любая дополнительная информация**
+Баг воспроизводится через раз, преимещественно по время полнолуния!
